tests/typing/good/testfile-underscore-2.go
package main

func f(_ int) {}
func main() {}
