tests/typing/bad/testfile-return-3.go
package main

func f() int {}
func main() { }
